east2/app/kube-info-app.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kube-info
    app.kubernetes.io/managed-by: quarkus
  name: kube-info
  namespace: east2-mesh-member
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kube-info
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: kube-info
  name: kube-info
  namespace: east2-mesh-member
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-info
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: kube-info
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: namespace
              value: 'us-east-2'       

          # https://github.com/jbride/pocs/tree/master/quarkus/kube-info
          image: quay.io/anattama/federation-demo #quay.io/jbride/kube-info:0.0.3

          imagePullPolicy: Always
          name: kube-info
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
