east2/app/vs-kube-info-standard.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-kube-info-standard
  namespace: east2-mesh-member
spec:
  hosts:
  - "*"
  gateways:
  - east2-istio-system/ootb-gateway
  http:
  - match:
    - uri:
        prefix: /info
    - uri:
        prefix: /hello    
    - uri:
        prefix: /switch503flag
    route:
    - destination:
        host: kube-info
        port:
          number: 8080
